--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>My first web page</h1>
-    <p>i am learning git/github</p>
+    <p>I am learning git/github</p>
+    <p>I learnt basic git commands</p>
 </body>
 </html>
